# forjj

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  ROADMAP.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/forjj-protocol/: Cargo.toml
crates/forjj-protocol/src/: framing.rs  lib.rs  messages.rs
crates/forjj-server/: Cargo.toml
crates/forjj-server/src/: api.rs  main.rs
crates/forjj-storage/: Cargo.toml
crates/forjj-storage/src/: lib.rs  object_id.rs  repository.rs
crates/forjj-storage/tests/: jj_cli_integration.rs
