[workspace]
resolver = "2"
members = [
    "crates/forjj-server",
    "crates/forjj-storage",
    "crates/forjj-protocol",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/trevorriles/forjj"

[workspace.metadata.crane]
name = "forjj"

[workspace.dependencies]
# jj integration
jj-lib = "0.38"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto
blake2 = "0.10"
hex = "0.4"

# Internal crates
forjj-storage = { path = "crates/forjj-storage" }
forjj-protocol = { path = "crates/forjj-protocol" }
