[package]
name = "forjj-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forjj-storage.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["io-util"] }
