[package]
name = "forjj-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jj-lib.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
blake2.workspace = true
hex.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile = "3"
